--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
     <title>Vite + React + TS</title>
   </head>
   <body>
-    <div id="root">
-      <h1>Puuuk</h1>
-    </div>
-    <script type="module" src="/src/main.tsx"></script>
+    <div id="root"></div>
+    <script type="module" src="./src/main.tsx"></script>
   </body>
 </html>
